app/assets/stylesheets/static_pages.scss
// Place all the styles related to the static_pages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

* {
  margin: 0px;
  padding: 0px;
}

body {
  background-color: #FFFFFF;
  font-family: 'Open Sans', sans-serif;
}

#nav-container {
  top: 0;
  position: fixed;
  width: 100%;
  background-color: #FFFFFF;
  z-index: 100;
}

#brand {
  color: #000000;
}

.navbar-brand a:hover {
  color: #FF99FF;
}

.navbar-default .navbar-nav > li > a {
    color: #000000;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
    color: #00FFCC;
}

#search-bar {
  height: 20px;
}

#search-group {
  padding-top: 5px;
}

#welcome-tron {
	align-text: 0px;
}


#search-bar {
  align-text: right;	
}


.fix-margin {margin: 0 auto}

.footer {
  bottom: 0;
  margin-top: 40px;
  width: 100%;
  height:60px;
  background-color: #FFFFFF;	
  clear: both;
} 

#copyright {
  padding: 40px 0px 0px 10px;
  font-size: 0.8em;
  font-weight: bold;
  color: #000000;
}

// INDEX PAGE STYLES

#welcome-tron {
  background-color:  #FFFFFF;
}

#bike-photo {
  margin-left: 350px;
}

